--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ VITE_FIREBASE_PROJECT_ID=visa-navigator-b5c34
 VITE_FIREBASE_STORAGE_BUCKET=visa-navigator-b5c34.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=321064045041
 VITE_FIREBASE_APP_ID=1:321064045041:web:0dd39691f9693477421c50
+
+VITE_DEV_API_ENDPOINT=http://localhost:5000/api
+VITE_PRODUCTION_API_ENDPOINT=""
