--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "antd": "^5.22.3",
     "dayjs": "^1.11.13",
     "firebase": "^11.0.2",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "react-simple-typewriter": "^5.0.1",
+    "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
